--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-react": "^6.24.1",
+    "classnames": "^2.2.5",
     "css-loader": "^0.28.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
