--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "coffeestats",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --config webpack.config.dev.js",
+    "build": "webpack --config webpack.config.production.js"
   },
   "dependencies": {
     "babel-core": "^6.24.1",
@@ -17,6 +18,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^5.0.1",
     "eslint-plugin-react": "^7.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
     "moment": "^2.18.1",
     "react": "^15.5.4",
@@ -26,6 +28,7 @@
     "svg-url-loader": "^2.0.2",
     "url-loader": "^0.5.8",
     "webpack": "^2.6.0",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "webpack-merge": "^4.1.0"
   }
 }
