--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "next",
+    "socket.io-client": "^2.0.1",
+    "socket.io-react": "^1.1.2",
     "style-loader": "^0.18.0",
     "svg-url-loader": "^2.0.2",
     "url-loader": "^0.5.8",
