--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "favicons-webpack-plugin": "^0.0.7",
     "html-webpack-plugin": "^2.28.0",
     "moment": "^2.18.1",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "next",
