--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-highcharts": "^12.0.0",
     "react-hot-loader": "next",
     "socket.io-client": "^2.0.1",
     "socket.io-react": "^1.1.2",
